# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/ChangeLog,v 1.37 2010/12/10 19:43:12 ulm Exp $

*emacs-vcs-23.2.91 (10 Dec 2010)

  10 Dec 2010; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-23.2.91.ebuild:
  New pretest version.

*emacs-vcs-23.2.90 (09 Nov 2010)

  09 Nov 2010; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-23.2.90.ebuild:
  Pretest for Emacs 23.3.

  07 Nov 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999.ebuild,
  emacs-vcs-24.0.9999.ebuild:
  Depend on virtual/jpeg wrt bug 327487.

  03 Nov 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999.ebuild:
  Pass the --with-crt-dir option to configure, as it was backported upstream.

  25 Oct 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999.ebuild,
  emacs-vcs-24.0.9999.ebuild:
  Filter -fstack-protector and -fstack-protector-all flags that cause
  segmentation faults in hardened profiles. Bug 285778.

  21 Oct 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
  New USE flags: gnutls and selinux.

  13 Oct 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999.ebuild,
  emacs-vcs-24.0.9999.ebuild:
  Create .keepinfodir file to prevent portage from rebuilding the Info dir,
  bug 257260.

  11 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  emacs-vcs-23.2.9999.ebuild, emacs-vcs-24.0.9999.ebuild:
  Update to new Bazaar smartserver repository URIs

  10 Oct 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999.ebuild,
  emacs-vcs-24.0.9999.ebuild:
  Don't rename GNU Info files, bug 306445. Fix openmotif dependency.

  25 Sep 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999.ebuild,
  emacs-vcs-24.0.9999.ebuild:
  Move regeneration of Info dir to pkg_preinst.

  22 Sep 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
  Add messages to "die" commands.

  13 Sep 2010; Christian Faulhammer <fauli@gentoo.org>