@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/emacs-vcs
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/ChangeLog,v 1.37 2010/12/10 19:43:12 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/ChangeLog,v 1.38 2010/12/29 12:51:04 ulm Exp $
+
+  29 Dec 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
+  Don't hardcode user for game score files.
 
 *emacs-vcs-23.2.91 (10 Dec 2010)
 
